# mcmaster-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: api_reference.yml  docs.yml  publish.yml
docs/: example.py
example/: example.ipynb  example.py
src/mcmaster_scraper/: __init__.py  async_api.py  main.py  sync_api.py
src/mcmaster_scraper/_api/: _text_parser.py  scraper.py  table_parser.py
src/mcmaster_scraper/_utils/: cache.py  event_loop_wrapper.py  page_provider.py
src/mcmaster_scraper/api/: scraper.py  tableparser.py  textparser.py
src/mcmaster_scraper/utils/: eventloopwrapper.py  ipykernelpatch.py
