[project]
name = "mcmaster-scraper"
version = "0.1.0"
description = "Fetch product tables from a McMaster-Carr URL as a DataFrame for complex filtering and calculations"
keywords = ["mcmaster", "mcmaster-carr", "scraper", "extractor", "parser", "fetcher", "part", "catalog", "product"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    { name = "Alex", email = "thedjchidev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "diskcache==5.6.3",
    "pandas==3.0.2",
    "platformdirs==4.9.6",
    "playwright==1.59.0",
]

[project.urls]
github = "https://github.com/thedjchi/mcmaster-scraper"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
