[project]
name = "mcmaster-scraper"
version = "0.1.0"
description = "Fetch product tables from a McMaster-Carr URL as a DataFrame for complex filtering and calculations"
keywords = ["mcmaster", "mcmaster-carr", "scraper", "extractor", "parser", "fetcher", "part", "catalog", "product"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    { name = "Alex", email = "thedjchidev@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "diskcache>=5.6.3",
    "pandas>=2.3.3",
    "platformdirs>=3.5.1",
    "playwright>=1.14.0",
    "playwright-stealth==2.0.3",
]

[project.urls]
github = "https://github.com/thedjchi/mcmaster-scraper"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pdoc>=16.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.ruff]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
